# pangofly

./: .gitignore  CMakeLists.txt  README.md  mkenv.mk  toolchain-arm.cmake
build_k230/: CMakeCache.txt  Makefile  cmake_install.cmake  pangofly_test
build_luckfox/: CMakeCache.txt  Makefile  cmake_install.cmake  face_recognition_node  image_capture_node  pangofly_test  result_display_node
cmake/: arm-rockchip830.cmake
core/: pangofly.cc  pangofly.h
core/common/: log.h  types.h
core/message/: message_info.h
core/node/: node.cc  node.h  reader.h  reader_base.h  writer.h  writer_base.h
core/transport/shm/: block.h  k230_shm.cc  k230_shm.h  posix_segment.cc  posix_segment.h  segment.cc  segment.h  shm_conf.cc  shm_conf.h  shm_region.cc  state.cc
design/: DESIGN.md  NON_POD_DESIGN.md
design/test/: a.out  test.cpp
docs/: pangofly_intro.md
examples/: README.md  camera_capture_node.cc  face_detection.idl  face_recognition.idl  face_recognition_node.cc  image_capture_node.cc  nonpod_example.cc  nonpod_shm_example.cc  result_display_node.cc
examples/common/shm_example/: CMakeLists.txt  reader.cc  shm_example.cc  writer.cc
examples/core/: nonpod_reader.cc  nonpod_writer.cc  reader.cc  shm_example.cc  writer.cc
examples/luckfox/face_recognition/: CMakeLists.txt  face_detection.h  face_recognition_node.cc  image_capture_node.cc  result_display_node.cc  v4l2_camera_capture.cc
gesture/: Makefile  Makefile.k230  README.md  copy.exp  copy_to_k230.py  copy_via_ssh.py  create_installer.sh  gesture_app  gesture_app.cc  gesture_app.h  gesture_main.cc  gesture_message.h  gesture_publisher.cc  gesture_publisher_pod  gesture_publisher_pod.b64  gesture_publisher_pod.cc  gesture_publisher_simple  gesture_publisher_simple.cc  gesture_subscriber.cc  gesture_subscriber_pod  gesture_subscriber_pod.b64  gesture_subscriber_pod.cc  gesture_subscriber_simple  gesture_subscriber_simple.cc  libpangofly.so.b64  run_test.sh  send_file.py  send_over_tcp.py  ssh_transfer.py  transfer.sh  transfer2.sh  transfer_files.py  transfer_manual.sh  transfer_with_pty.py
idl/: README.md  face_detection.idl  idl_generator.py  pangofly_idl.h
idl/allocator/: block_allocator.h  block_ptr.h  channel_block_pool.h  slab_allocator.cc  slab_allocator.h
idl/ast/: ast.h
idl/codegen/: code_generator.cc  code_generator.h
idl/container/: message_container.h  string.h  vector.h
idl/lexer/: lexer.cc  lexer.h
idl/parser/: parser.cc  parser.h
idl/tools/: idc.cc
pangofly/: pangofly.cc  pangofly.h
pangofly/common/: macros.h
pangofly/examples/: nonpod_reader.cc  nonpod_writer.cc  reader.cc  shm_example.cc  writer.cc
pangofly/node/: node.cc  node.h  reader.h  reader_base.h  writer.h  writer_base.h
pangofly/transport/shm/: block.h  k230_shm.cc  k230_shm.h  posix_segment.cc  posix_segment.h  segment.cc  segment.h  shm_conf.cc  shm_conf.h  shm_region.cc  shm_region.h  state.cc  state.h
rtos_k230/: CMakeLists.txt  Makefile  SConscript  SConstruct  k230_node.cc  k230_node.h  k230_reader_writer.h  k230_segment.cc  k230_segment.h  pangofly_shm_k230.cc  pangofly_shm_k230.h
test/: test_nonpod_x86.cc
